--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,11 +1,21 @@
 <div class="row">
-  <form [formGroup]="myForm" class="col s12">
+  <form [formGroup]="myForm" (ngSubmit)="onSubmit()" class="col s12">
     <div class="row">
       <div class="col s6">
         <app-category [categoryFormGroup]="myForm.get('category')"></app-category>
       </div>
       <div class="col s6">
         <app-media [mediaFormGroup]="myForm.get('media')" [categoryFormGroup]="myForm.get('category')"></app-media>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12">
+        <app-custom-inputs [hostFormGroup]="myForm" [categoryFormGroup]="myForm.get('category')"></app-custom-inputs>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12">
+        <button md-raised-button type="submit" color="accent">Submit</button>
       </div>
     </div>
   </form>
