--- a/src/app/form/media/media.component.html
+++ b/src/app/form/media/media.component.html
@@ -1,5 +1,5 @@
 <div [formGroup]="mediaFormGroup">
-  <md-select placeholder="media" formControlName="media" [multiple]="true" [disabled]="!categoryFormGroup.get('second').valid">
+  <md-select *ngIf="!mediaFormGroup.get('media').disabled" formControlName="media" placeholder="media" [multiple]="true">
     <md-option *ngFor="let m of mediaList" [value]="m.id">{{ m.text }}</md-option>
   </md-select>
 </div>
