--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -21,5 +21,5 @@
   </form>
 </div>
 
-<pre>myForm.value: {{ myForm.value | json }}</pre>
+<pre>myForm.value: {{ currentFormValue | json }}</pre>
 <pre>myForm.valid: {{ myForm.valid | json }}</pre>
