--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <form [formGroup]="myForm" (ngSubmit)="onSubmit()" class="col s12">
+  <form [formGroup]="myForm" (submit)="onSubmit()" class="col s12">
     <div class="row">
       <div class="col s6">
         <app-category [categoryFormGroup]="myForm.get('category')"></app-category>
@@ -21,5 +21,5 @@
   </form>
 </div>
 
-<pre>myForm.value: {{ currentFormValue | json }}</pre>
+<pre>myForm.value: {{ myForm.value | json }}</pre>
 <pre>myForm.valid: {{ myForm.valid | json }}</pre>
