Select2 component is now compatible with [(ngModel)] syntax.

--- a/src/app/select2/select2.component.html
+++ b/src/app/select2/select2.component.html
@@ -1,2 +1,2 @@
-<select style="width: 100%" [ngModel]="controlValue">
+<select style="width: 100%" [ngModel]="controlValue" (click)="onClick()">
 </select>
