--- a/src/app/form/media/media.component.html
+++ b/src/app/form/media/media.component.html
@@ -9,6 +9,16 @@
     <div class="col s6">
       <app-select2 *ngIf="!mediaFormGroup.get('select2').disabled" formControlName="select2" [multiple]="true" placeholder="文字を入力"
         [ajaxSearchFunction]="firebase.searchMedia" [ajaxGetFunction]="firebase.getMedia"></app-select2>
+      {{ mediaFormGroup.value | json }}
     </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col s6">
+    <app-select2 [(ngModel)]="select2MediaValue" [multiple]="true" placeholder="文字を入力"
+      [ajaxSearchFunction]="firebase.searchMedia" [ajaxGetFunction]="firebase.getMedia"
+      (changeEvent)="changeMediaValue($event)"></app-select2>
+    {{ select2MediaValue | json }}
   </div>
 </div>
